--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,3 +1,5 @@
+<%# <%= render 'shared/errors', obj: @user %> %>
+
 <h1>The users login page</h1>
 <%= form_with scope: :users , url:'/user/login' , local: true ,method: :post , data: { turbo: false } do |f| %>
 <%= f.label :email%>
