--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
   <%= render 'layouts/messages'%>
-  <%= render 'layouts/navigation'%>
+<%= render '/layouts/navigation'%>
   <%= yield %>
   </body>
 </html>
