--- a/app/views/managers/login.html.erb
+++ b/app/views/managers/login.html.erb
@@ -1,13 +1,18 @@
-<%# <%= render 'shared/errors', obj: @manager %> %>
+<%# <%= render 'shared/errors', obj: @manager %> 
 
-<h1>The managers login page</h1>
-<%= form_with scope: :managers , url:'/hotelManager/login' , local: true ,method: :post , data: { turbo: false } do |f| %>
-<%= f.label :email%>
-<%= f.email_field :email%>
-<%= f.label :password%>
-<%= f.password_field :password%>
-</p>
-<p>
-<%= f.submit%>
-</p>
+<div class="login_form">
+    <h1>Manager Login</h1>
+    <%= form_with scope: :managers , url:'/hotelManager/login' , local: true ,method: :post , data: { turbo: false } do |f| %>
+    <div class="input_container">
+        <div class="row">
+            <%= f.label :email%>
+            <%= f.email_field :email, placeholder:"Email"%>
+        </div>
+        <div class="row">
+            <%= f.label :password%>
+            <%= f.password_field :password, placeholder:"Password"%>
+        </div>
+        <%= f.submit "Login" , :class => 'login_btn'%>
+    </div>
+</div>
 <%end%>
