--- a/app/assets/stylesheets/navBar.css
+++ b/app/assets/stylesheets/navBar.css
@@ -2,7 +2,7 @@
 
 :root {
    --text: #200e1f;
---background: #f3e2f2;
+--background: rgb(250,250,250);
 --primary-button: #cb86c6;
 --secondary-button: #ebd1e9;
 --accent: #c374be;
@@ -10,6 +10,10 @@
 
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--background);
 }
 
 /* navigation styles start here */
@@ -33,7 +37,11 @@
 .nav-toggle:focus ~ .nav-toggle-label {
   outline: 3px solid rgba(var(--background), .75);
 }
-
+.logo{
+  text-decoration: none;
+  color:white;
+  font-size:2.3rem;
+}
 .nav-toggle-label {
   position: absolute;
   top: 0;
@@ -125,7 +133,7 @@ nav a:hover {
   }
   
   .logo {
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
   }
   
   nav {
