--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,6 @@
 
 <div class="navBar">
-<h1 class = "logo">
-  <%= link_to "App" , root_path%>
-  </h1>
+  <%= link_to "EasyBook" , root_path , :class => "logo"%>
   <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <nav>
     <ul>
