--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,33 @@
-<h1>Home page</h1>
-
-
-<%= form_with scope: :query , url:'/hotel/search' , local: true ,method: :post , data: { turbo: false } do |f| %>
-<%= f.label :query%>
-<%= f.text_field :query%>
-<%= f.label :checkInDate%>
-<%= f.date_field :checkInDate%>
-<%= f.label :checkOutDate%>
-<%= f.date_field :checkOutDate%>
-<%= f.submit "Search"%>
+<section class="section-background parallax">
+  <div>
+  <h1>SEE THE WORLD FOR LESS</h1>
+  <p>We at book easy ensure that you can find your best stays at ease.</p>
+  </div>
+</section>
+<div class="search_form">
+    <%= form_with scope: :query , url:'/hotel/search' , local: true ,method: :post , data: { turbo: false } do |f| %>
+    <div class="search_input_container">
+        <div class="search_row"><i class="bi bi-geo-alt"></i><%= f.text_field :query , placeholder: "Search locations or hotels"%></div>
+        <div class="search_row_2">
+        <div>
+            <%= f.label "Check in"%>
+                <%= f.date_field :checkInDate , placeholder: "Check in date"%>
+        </div>
+        <div>
+            <%= f.label "Check out"%>
+                <%= f.date_field :checkOutDate , placeholder: "Check out date"%>
+        </div>
+        </div>
+    </div>
+    <div class="search_btn_container"><%= f.submit "Search" , :class => "home_search_button"%></div>
+</div>
+<section>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ut quos sunt?</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ut quos sunt?</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ut quos sunt?</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ut quos sunt?</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ut quos sunt?</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ut quos sunt?</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ut quos sunt?</p>
+    </section>
 <%end%>
