--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,14 +1,21 @@
-<%= render 'shared/errors', obj: @user %>
-<h1>The users signup page</h1>
-<%= form_with scope: :users , url:'/user/signup' , local: true ,method: :post , data: { turbo: false } do |f| %>
-<%= f.label :name%>
-<%= f.text_field :name%>
-<%= f.label :email%>
-<%= f.email_field :email%>
-<%= f.label :password%>
-<%= f.password_field :password%>
-</p>
-<p>
-<%= f.submit%>
-</p>
-<%end%>
+<%# <%= render 'shared/errors', obj: @user %> 
+<div class="login_form">
+    <h1>User Signup</h1>
+    <%= form_with scope: :users , url:'/user/signup' , local: true ,method: :post , data: { turbo: false } do |f| %>
+    <div class="input_container">
+        <div class="row">
+            <%= f.label :name%>
+            <%= f.text_field :name , placeholder: "Name"%>
+        </div>
+        <div class="row">
+            <%= f.label :email%>
+            <%= f.email_field :email , placeholder: "Email"%>
+        </div>
+        <div class="row">
+            <%= f.label :password%>
+            <%= f.password_field :password , placeholder: "Password"%>
+        </div>
+        <%= f.submit "Sign up" , :class => 'login_btn'%>
+    </div>
+    <%end%>
+</div>
