search addons done

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -110,3 +110,111 @@
   transform: translateY(2px);
 }
 
+
+
+/* Dropdown */
+
+.dropdown {
+  display: inline-block;
+  position: relative;
+  margin-left:40px;
+}
+
+.dd-button {
+  display: inline-block;
+  border: 1px solid gray;
+  border-radius: 4px;
+  padding: 10px 30px 10px 20px;
+  background-color: #ffffff;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.dd-button:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  width: 0; 
+  height: 0; 
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid black;
+}
+
+.dd-button:hover {
+  background-color: #eeeeee;
+}
+
+
+.dd-input {
+  display: none;
+}
+
+.dd-menu {
+  position: absolute;
+  top: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0;
+  margin: 2px 0 0 0;
+  box-shadow: 0 0 6px 0 rgba(0,0,0,0.1);
+  background-color: #ffffff;
+  list-style-type: none;
+}
+
+.dd-input + .dd-menu {
+  display: none;
+} 
+
+.dd-input:checked + .dd-menu {
+  display: block;
+} 
+
+.dd-menu li {
+  padding: 10px 20px;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.dd-menu li:hover {
+  background-color: #f6f6f6;
+}
+
+.range_search{
+  width: 90%;
+  margin-inline:auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.range_search > p {
+  margin-block:0px;
+  margin-inline:12px;
+}
+
+.info_sec{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 80%;
+  padding:2rem;
+}
+
+.info_sec_content{
+  padding:2rem;
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+  flex : 1 1 60%;
+}
+
+.img_container{
+  flex : 1 1 40%;
+  background-image: url('home_sec.jpg');
+  background-size: cover;
+  height: 450px;
+  /* width:350px; */
+}
