Styles almost done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,7 @@
 @import "choosePage";
 @import "home";
 @import "userDashboard";
-@import "managerDashboard"
+@import "managerDashboard";
+@import "search";
+@import "create";
+@import "book";
