--- a/app/assets/stylesheets/managerDashboard.css
+++ b/app/assets/stylesheets/managerDashboard.css
@@ -1,3 +1,55 @@
 .hotel_details{
+    background-color: white;
+    padding:1.3rem;
+    font-size:1.4rem;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
 
+.first_row{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding:2rem; 
+}
+
+.searchElements{
+    flex:1 1 60%;
+    font-size:1.15rem;
+}
+
+.searchElements input{
+    padding:0.5rem;
+    font-size:1.2rem;
+}
+
+.msecond_row{
+    width:90%;
+    margin-inline:auto;
+}
+
+.hotel_bookings_header{
+    display: grid;
+    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr;
+}
+
+.hotel_bookings_header li {
+    list-style-type: none;
+    font-size:1.3rem;
+    font-weight: 1rem;;
+}
+
+.booking_row {
+    display: grid;
+    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr;
+    font-size: 1.15rem;
+}
+
+.bookings_container{
+    width: 80%;
+    padding:1.5rem;
+    margin-inline: auto;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 15px;
 }
