--- a/app/assets/stylesheets/navBar.css
+++ b/app/assets/stylesheets/navBar.css
@@ -190,3 +190,16 @@ nav a:hover {
   }
 }
 
+.footer {
+  background-color: black;
+  color:white;
+  margin:10px 0px 0 0;
+  margin-top: auto;
+  padding:0.8rem;
+  font-size: large;
+  text-align: center;
+  position:absolute;
+  bottom:0px;
+  left:0px;
+  right: 0px;
+}
