--- a/app/views/hotels/create.html.erb
+++ b/app/views/hotels/create.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_include_tag "test.js", "data-turbo-track": "reload", defer: true %>
 <%= render 'shared/errors', obj: @hotel %>
-<h1>Register the hotel here</h1>
+<h1>Register your hotel</h1>
 <%= form_with scope: :custom , url:'/hotel/handleCreate' , local: true ,method: :post , data: { turbo: false } do |f| %>
 <%= f.label :name%>
 <%= f.text_field :name%>
@@ -9,11 +9,13 @@
 <%= f.label :description%>
 <%= f.text_field :description%>
  <div id="rooms">
-  <p>Room types</p>
+ <h2>Room types</h2>
   <div><%= render partial: "rooms_form", locals: {skill: false} %></div>
   </div>
-  <button id="addtag">Add more Room types</button>
-<%= f.submit%>
+  <div class="btns_container">
+    <%= f.submit "Register", :class => "login_btn" %>
+    <button id="addtag" class = "add_room_btn">Add more Room types</button>
+  </div>
 <%end%>
 <div id="new_rooms_form" style="display:none">
   <%= render partial: "rooms_form", locals: {room: false} %>
