--- a/app/views/hotels/search.html.erb
+++ b/app/views/hotels/search.html.erb
@@ -1,24 +1,36 @@
-<button class = "btn btn-primary">Is bootstrap working</button>
-<h1>The search results page</h1>
+<% if @finalArr.length == 0%>
+<p>No results found , ensure if you are giving the correct location or name</p>
+<%else%>
+<p><%= @finalArr.length %> hotel/s matched your search</p>
+<div class="search_results_container">
 <% @finalArr.each do |hotel|%>
-<div>
-<h2>Hotel</h2>
-    <p><%= hotel["hotel"].name%>
-    <p><%= hotel["hotel"].address%>
-    <p><%= hotel["hotel"].description%>
-    <h3>Rooms</h3>
-   <% hotel["rooms"].zip(hotel["availability"]).each do |room , availability| %>
-    <p><%= room.roomType%></p>
-    <p><%= room.cost%></p>
-    <p><%= availability%></p>
-    <%= button_to "Book this" , 
-    hotel_book_path(:roomDetails =>{:availability => availability ,  :roomType => room.roomType , :roomCost => room.cost , :checkInDate => @checkInDate , :checkOutDate => @checkOutDate , :roomId => room.id , :hotelId => hotel["hotel"].id}), 
-    data: { 'turbo-method' => :post }
-    %>
-
-    <%end%>
-    <h3>Manager</h3>
-    <p><%= hotel["manager"].name %></p>
-    <p><%= hotel["manager"].phoneNumber%></p>
+<div class = "search_results_row">
+  <h2><%= hotel["hotel"].name%></h2>
+      <p>Address: <%= hotel["hotel"].address%>
+      <p>Description: <%= hotel["hotel"].description%>
+      <h3>Rooms</h3>
+     <div class="room_container">
+     <div class = "room_header">
+     <li>Room type</li>
+     <li>Cost per day</li>
+     <li>Total rooms available</li>
+     </div>
+       <% hotel["rooms"].zip(hotel["availability"]).each do |room , availability| %>
+        <div class="room">
+          <p><%= room.roomType%></p>
+          <p><%= room.cost%></p>
+          <p><%= availability%></p>
+                <%= button_to "Book this" ,
+                hotel_book_path(:roomDetails =>{:availability => availability ,  :roomType => room.roomType , :roomCost => room.cost , :checkInDate => @checkInDate , :checkOutDate => @checkOutDate , :roomId => room.id , :hotelId => hotel["hotel"].id}),
+                data: { 'turbo-method' => :post }
+                %>
+        </div>
+      <%end%>
+     </div>
+      <div class="managerDetails">
+        <p>Contact <%= hotel["manager"].name %> @ <%= hotel["manager"].phoneNumber%></p>
+      </div>
+  </div>
+<%end%>
 </div>
 <%end%>
