--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,6 +29,13 @@
                     <%= f.label :Availability %>
                 </td>
               </div>
+             <div class="checkbox">
+                <td>
+                  <%= f.check_box :sortByRating %>
+                    <%= f.label :Rating %>
+                </td>
+              </div>
+
             </ul>
 
           </label>
