--- a/app/assets/stylesheets/userDashboard.css
+++ b/app/assets/stylesheets/userDashboard.css
@@ -36,7 +36,7 @@
 }
  .dashboard_header{
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr;
  }
 
  .dashboard_header > li {
@@ -47,7 +47,7 @@
 
 .dashboard_row {
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr;
     font-size:1.15rem;
 }
 
@@ -56,4 +56,11 @@
     text-transform: uppercase;
     margin:0px 0px 10px 0px;
     width: 100%;
+}
+
+.rating_form{
+    width: 100%;
+}
+.rating_form input {
+    width: 50px;
 }
