--- a/app/views/users/_booking.html.erb
+++ b/app/views/users/_booking.html.erb
@@ -6,6 +6,20 @@
         <p><%= booking.price %></p>
         <p><%= booking.checkInDate %></p>
         <p><%= booking.checkOutDate %></p>
+         <div>
+             <% if @bookings.find{|ubooking| ubooking.id == booking.id}%>
+             <p>You rated your stay a <%= @bookings.find{|ubooking| ubooking}.rating.rating%></p>
+             <%else%>
+                     <div class="rating_form">
+                         <%= form_with scope: :rating , url:user_rate_path , local: true ,method: :post , data: { turbo: false } do |f| %>
+                         <%= f.number_field :rating%>
+                         <%= f.hidden_field :booking_id , :value =>booking.id %>
+                         <%= f.submit "Rate between 1 and 5"%>
+                     </div>
+                    <%end%>
+            <%end%>
+         </div>
+        
     </div>
     <%end%>
   
