--- a/app/views/users/_upcomingbooking.html.erb
+++ b/app/views/users/_upcomingbooking.html.erb
@@ -1,5 +1,5 @@
 <% obj.each do |booking|%>
-    <div class="dashboard_row">
+    <div class="up_dashboard_row">
         <p><%= booking.name%></p>
         <p><%= booking.roomType %></p>
         <p><%= booking.numRoomsBooked %></p>
