--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -55,14 +55,13 @@
         <%if @futureBookings.length == 0%>
             <p>No upcoming stays </p>
         <%else%>
-<div class="dashboard_header">
+<div class="up_dashboard_header">
 <li>Hotel</li>
 <li>Room Type</li>
 <li>Number of rooms booked</li>
 <li>Total price</li>
 <li>Check in date</li>
 <li>Check out date</li>
-<li>Rating</li>
 </div>
 <%= render 'upcomingbooking', obj: @futureBookings %>
   <%= will_paginate @futureBookings%>
